# keh-tech-radar-lambda

./: .dockerignore  .gitignore  CODEOWNERS  Dockerfile  Makefile  README.md  dev_requirements.txt  main.py  pyproject.toml  requirements.txt  run_local.py
.github/workflows/: ci.yml
aws_lambda_script/: Dockerfile  README.md  main.py
terraform/lambda/: data.tf  main.tf  variables.tf
terraform/lambda/env/dev/: backend-dev.tfbackend  example_tfvars.txt
terraform/storage/: storage.tf  variables.tf
terraform/storage/env/prod/: backend-sandbox.tfbackend
terraform/storage/env/sandbox/: backend-dev.tfbackend
